# SPNbox-Attack

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  attack.cpp  attack16.cpp  attack_bench.cpp
src/crypto/: CMakeLists.txt
src/crypto/AES/: AES128.cpp  AES128.h  AES128_5ni.cpp  AES128_5ni.hpp  AES128_full.cpp  AES128_full.h  AES128_ni.cpp  AES128_ni.h  CMakeLists.txt
src/crypto/GF/: GF216.cpp  GF216.h  GF224.cpp  GF224.h  GF28.cpp  GF28.h
src/crypto/SPNbox/: SPNbox16.cpp  SPNbox16_old.cpp  SPNbox16_old.h  SPNbox8.cpp  SPNbox8.h
src/crypto/utils/: component.cpp  component.h
