
add_library(OGF28 OBJECT GF/GF28.cpp GF/GF28.h)
add_library(OGF216 OBJECT GF/GF216.cpp GF/GF216.h)
add_library(OGF224 OBJECT GF/GF224.cpp GF/GF224.h)
add_library(OAESNI OBJECT AES/AES128_ni.cpp AES/AES128_ni.h)

add_library(GF28 STATIC $<TARGET_OBJECTS:OGF28>)
add_library(GF216 STATIC $<TARGET_OBJECTS:OGF216>)
add_library(GF224 STATIC $<TARGET_OBJECTS:OGF224>)

add_library(AESNI STATIC $<TARGET_OBJECTS:OAESNI>)

# add_library(AES STATIC AES/AES128.cpp AES/AES128.h $<TARGET_OBJECTS:OGF28>)

# add_library(AESFULL STATIC AES/AES128_full.cpp AES/AES128_full.h)

add_library(SPNBOX8  STATIC SPNbox/SPNbox8.h  SPNbox/SPNbox8.cpp  $<TARGET_OBJECTS:OAESNI> $<TARGET_OBJECTS:OGF28>)
add_library(SPNBOX16 STATIC SPNbox/SPNbox16.h SPNbox/SPNbox16.cpp $<TARGET_OBJECTS:OAESNI>)

add_library(COMPONENT STATIC utils/component.cpp utils/component.h $<TARGET_OBJECTS:OAESNI> $<TARGET_OBJECTS:OGF28>)
